[tool.poetry]
name = "asylumeval"
version = "0.1.0"
description = "Scripts for visualizing/evaluating asylum spectroscopic data."
authors = ["Nick Sullivan <nsulmol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
matplotlib = "^3.9.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
scifireaders = {path = "../scifireaders", develop = true}
fire = "^0.6.0"
colorlog = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
visualize = "asylumeval.main:cli"
